@@ -1,4 +1,5 @@
 ======================
+    ADDED: packing / unpacking to/from remote URL-s
     ADDED: short tab names
     ADDED: compare directories (mark menu)
     ADDED: shift+left/right changes tabs (thanks to Dmitry Suzdalev)
